--- a/views/article2.ejs
+++ b/views/article2.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>速腾聚创用户条款</title>
+<title>RoboPano用户条款</title>
 <meta name="viewport" content="width=device-width,user-scalable=no"/>
 <meta charset="utf-8" />
 <style type="text/css">
