--- a/views/article4.ejs
+++ b/views/article4.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>速腾聚创售后服务</title>
+<title>RoboPano售后服务</title>
 <meta name="viewport" content="width=device-width,user-scalable=no"/>
 <meta charset="utf-8" />
 <style type="text/css">
