--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,7 +8,7 @@
                     <div class="icon wechat-head" style="display:block;background-color:#fff;background-image:url(<%=wechat_info.headimgurl%>);width:42px;height:42px;border-radius:22px;">
                     </div><div class="marginleft10"><%=wechat_info.nickname%></div>
                 </a>
-                <a class="list-item hstart borderbox vertical" style="display:none"><div>关于我们：</div><div>深圳市速腾聚创科技有限公司（简称STI）是目前全球领先的专业级三维激光扫描设备及服务的提供商。</div></a>
+                <a class="list-item hstart borderbox vertical" style="display:none"><div>关于我们：</div><div>深圳市RoboPano科技有限公司（简称STI）是目前全球领先的专业级三维激光扫描设备及服务的提供商。</div></a>
                 <%}else{%>
                 <a class="list-item vcenter borderbox" href='/romaing'>漫游列表</a>
                 <a class="list-item vcenter borderbox" href='/login'>退出登陆</a>
