--- a/views/index/buy.ejs
+++ b/views/index/buy.ejs
@@ -26,7 +26,7 @@
 	<div id="buy-wrapper">
         <div class="header">
             <h2 class="title"><%=lang=='cn'?'RoboSense产品购买意向表':'RoboSense Purchase Intention'%></h2>
-            <p class="desc"><%=lang=='cn'?'非常感谢您对速腾聚创的认可，我们将竭力为您服务！我们将在24小时内回复您的意向需求，感谢您的支持。':'Thank you for your recognition of of our products. Your purchase intention will be attended to within 24 hours. Thank you for your support.'%></p>
+            <p class="desc"><%=lang=='cn'?'非常感谢您对RoboPano的认可，我们将竭力为您服务！我们将在24小时内回复您的意向需求，感谢您的支持。':'Thank you for your recognition of of our products. Your purchase intention will be attended to within 24 hours. Thank you for your support.'%></p>
         </div>
         <div class="content">
             <div class="dail-wrapper">
