--- a/views/index/join.ejs
+++ b/views/index/join.ejs
@@ -66,7 +66,7 @@
           <div>
             <h3>企业简介：</h3>
             <p>
-              速腾聚创科技有限公司（Suteng Innovation Technology Co.,LTD，简称STI），是全球领先的机器人技术研发及相关设备提供商。<br/>
+              RoboPano科技有限公司（Suteng Innovation Technology Co.,LTD，简称STI），是全球领先的机器人技术研发及相关设备提供商。<br/>
               目前，公司针对企业级客户自主研发并推出3D扫描仪SEEKER系列与全景扫描仪IPANO系列。是全球领先的专业级三维激光扫描设备提供商，也是首家全景扫描设备供应商。</p>
           </div>
           <div>
