--- a/views/index/joinus.ejs
+++ b/views/index/joinus.ejs
@@ -112,7 +112,7 @@
 
     <!-- <header class="career-navbar">
         <a class="nav-close" href="./main">返回主页</a>
-        <a class="brand" href="./main"><img src="/index/images/icon/logo.png" alt="速腾聚创"></a>
+        <a class="brand" href="./main"><img src="/index/images/icon/logo.png" alt="RoboPano"></a>
     </header> -->
     <div id="header">
         <div class="nav">
@@ -131,7 +131,7 @@
     </div>
     <div id="career">
         <article class="description fl">
-            <h1><%=lang=='cn'?'为何加入速腾聚创':'How to join RoboSense?'%></h1>
+            <h1><%=lang=='cn'?'为何加入RoboPano':'How to join RoboSense?'%></h1>
             <p v-for="lang in lang_<%=lang%>" v-text="lang"></p>
         </article>
         <div class="jobs fl">
@@ -384,8 +384,8 @@
                 filtername: '',
                 lang_cn: [
                     '我们在全球范围内寻找顶尖精英人才', 
-                    '只要你敢想敢做，深圳速腾聚创科技有限公司就是你实现梦想的舞台，在这里你可以尽情彰显个性，释放激情。',
-                    '只要你是牛人，只要你对梦想有所执着，深圳速腾聚创科技有限公司就是你的归属。',
+                    '只要你敢想敢做，深圳RoboPano科技有限公司就是你实现梦想的舞台，在这里你可以尽情彰显个性，释放激情。',
+                    '只要你是牛人，只要你对梦想有所执着，深圳RoboPano科技有限公司就是你的归属。',
                     '有意者请将个人简历、相关作品等资料发电子邮件至hr@sz-sti.com，合则约见。',
                     '(注意：作品文件大小请控制在40M内)'
                 ],
