--- a/views/index/lang_cn.ejs
+++ b/views/index/lang_cn.ejs
@@ -25,7 +25,7 @@
 			"prometheus":"普罗米修斯"
 		},
 		"section_2":{
-			"p1":"RS-LiDAR是深圳市速腾聚创科技有限公司最新推出的16线激光雷达，是国内首款、世界领先的小型激光雷达。",
+			"p1":"RS-LiDAR是深圳市RoboPano科技有限公司最新推出的16线激光雷达，是国内首款、世界领先的小型激光雷达。",
 			"p2":"主要面向无人驾驶汽车环境感知、机器人环境感知、无人机测绘等领域。",
 			"p3":"RS-LiDAR通过16个激光头同时发射高频率激光束对外界环境进行持续性的扫描，经过高速数字信号处理技术和测距算法提供三维空间点云数据及物体反射率，可以让机器看到周围的世界，为定位、导航、避障等提供有力的保障。",
 			"a":"了解参数"
@@ -76,7 +76,7 @@
 			"solution":"解决方案"
 		},
 		"section_2":{
-			"p1":"Seeker  Series是RoboSense(速腾聚创)完全自主研发的三维激光雷达。",
+			"p1":"Seeker  Series是RoboSense(RoboPano)完全自主研发的三维激光雷达。",
 			"p2":"通过高速激光扫描的方法，Seeker系列产品以点云形式获取物体或地形表面的阵列式几何图像数据，Seeker用户在不同时间、场所都可以在不损眼部的情况下轻松获得精确的三维建档数据。",
 			"p3":"针对不同行业与场景的需求，我们持续开发配套定制化的专业软件。令您在使用过程中更加愉悦。",
 			"a":"了解参数"
@@ -151,13 +151,13 @@
 	},
 	company:{
 		"threeMenu":"企业介绍",
-		"p1":"RoboSense(速腾聚创)是全球领先的激光雷达公司。注册资本1000万。利用公司自主研发的具有世界领先水平的机器人感知产品，将激光雷达传感器硬件方案、三维数据处理算法和深度学习技术相结合。通过持续的技术创新，让机器人拥有超越人类眼睛的环境感知能力。",
-		"p2":"公司注册于2014年，初期由哈工大博士团队创建。经过7年的科研沉淀与3年的商业化转换。目前速腾聚创成功建立起围绕激光雷达环境感知为核心的产销研一体化经营体系。",
-		"p3":"速腾聚创研发与运营中心位于中国深圳南山区，并在北京与硅谷设有办事处。截止至2017年4月，公司全职员工超过百名（不含生产基地员工），其中核心研发团队研究生占比超过60%。并长期与麻省理工、清华、哈工大等国内外一流学府及研究机构保持着人才输送和学术研究合作。",
+		"p1":"RoboSense(RoboPano)是全球领先的激光雷达公司。注册资本1000万。利用公司自主研发的具有世界领先水平的机器人感知产品，将激光雷达传感器硬件方案、三维数据处理算法和深度学习技术相结合。通过持续的技术创新，让机器人拥有超越人类眼睛的环境感知能力。",
+		"p2":"公司注册于2014年，初期由哈工大博士团队创建。经过7年的科研沉淀与3年的商业化转换。目前RoboPano成功建立起围绕激光雷达环境感知为核心的产销研一体化经营体系。",
+		"p3":"RoboPano研发与运营中心位于中国深圳南山区，并在北京与硅谷设有办事处。截止至2017年4月，公司全职员工超过百名（不含生产基地员工），其中核心研发团队研究生占比超过60%。并长期与麻省理工、清华、哈工大等国内外一流学府及研究机构保持着人才输送和学术研究合作。",
 		"p4":"邱纯鑫",
 		"p5":"首席执行官",
 		"p6":"哈尔滨工业大学控制科学方向博士，移动机器人环境感知技术专家",
-		"p7":"曾在JFR(Journal of Field Robotics)等国际顶级机器人刊物上发表多篇论文，完成过包括国家自然科学基金在内的多个机器人相关项目的研发工作；2014年创办深圳速腾聚创(RoboSense)，开发用于自动驾驶领域的高端激光雷达技术，目前该公司已经成为国内激光雷达技术领域的先行者。",
+		"p7":"曾在JFR(Journal of Field Robotics)等国际顶级机器人刊物上发表多篇论文，完成过包括国家自然科学基金在内的多个机器人相关项目的研发工作；2014年创办深圳RoboPano(RoboSense)，开发用于自动驾驶领域的高端激光雷达技术，目前该公司已经成为国内激光雷达技术领域的先行者。",
 	},
 	contact:{
 		"threeMenu":{
@@ -272,9 +272,9 @@
 			"inputplaceholder":"职位关键词"
 		},
 		"section_2":{
-			"h2":"速腾聚创",
-			"p1":"RoboSense(速腾聚创)，利用公司自主研发的具有世界领先水平的机器人感知产品，将三维数据处理算法和深度学习技术相结合。通过持续的技术创新，让机器人拥有超越人类眼睛的环境感知能力。以市场需求为导向，为客户提供硬件设备、软件、服务和解决方案。",
-			"p2":"公司研发中心位于深圳，核心研发团队研究生占比超过70%。并长期与麻省理工、清华、哈工大等国内外一流学府及研究机构保持着人才输送和学术研究合作。目前，RoboSense(速腾聚创)自主研发的激光雷达产品可广泛应用于无人驾驶、无人机、三维测量及数字建模等领域，并针对不同的需求配套定制化的专业软件。凭借全球领先的技术水平、优质的服务与性价比，迅速与各行业的巨擘紧密合作，为合作伙伴带来强劲的行业竞争力。作为国内领先的高新科技型企业，公司获得多项国家科研资金扶持，正高速发展中。",
+			"h2":"RoboPano",
+			"p1":"RoboSense(RoboPano)，利用公司自主研发的具有世界领先水平的机器人感知产品，将三维数据处理算法和深度学习技术相结合。通过持续的技术创新，让机器人拥有超越人类眼睛的环境感知能力。以市场需求为导向，为客户提供硬件设备、软件、服务和解决方案。",
+			"p2":"公司研发中心位于深圳，核心研发团队研究生占比超过70%。并长期与麻省理工、清华、哈工大等国内外一流学府及研究机构保持着人才输送和学术研究合作。目前，RoboSense(RoboPano)自主研发的激光雷达产品可广泛应用于无人驾驶、无人机、三维测量及数字建模等领域，并针对不同的需求配套定制化的专业软件。凭借全球领先的技术水平、优质的服务与性价比，迅速与各行业的巨擘紧密合作，为合作伙伴带来强劲的行业竞争力。作为国内领先的高新科技型企业，公司获得多项国家科研资金扶持，正高速发展中。",
 			"p3":"公司本着“梦想不断，创新无限”的文化，以“功夫到家”的科研精神竭力发展最顶级、性能最优越的高科技产品，以创新点亮世界未来，致力于提升社会生产力，改变人类生活！"
 		},
 		"section_3":{
@@ -290,13 +290,13 @@
 			"li8":"休闲活动"
 		},
 		"section_5":{
-			"h2":"为何加入速腾聚创",
+			"h2":"为何加入RoboPano",
 			"p1":"我们在全球范围内寻找顶尖精英人才",
-			"p2":"只要你敢想敢做，速腾聚创就是你实现梦想的舞台，在这里你可以尽情彰显个性，释放激情。",
-			"p3":"只要你是牛人，只要你对梦想有所执着，深圳速腾聚创科技有限公司就是你的归属。"
+			"p2":"只要你敢想敢做，RoboPano就是你实现梦想的舞台，在这里你可以尽情彰显个性，释放激情。",
+			"p3":"只要你是牛人，只要你对梦想有所执着，深圳RoboPano科技有限公司就是你的归属。"
 		},
 		"section_6":{
-			"h":"准备加入速腾聚创了吗？",
+			"h":"准备加入RoboPano了吗？",
 			"p1":"只要你是牛人，只要你对梦想有所执着，速腾就是你的归属。",
 			"p2":"职位",
 			"h1":"硬件工程师",
