--- a/views/index/main.ejs
+++ b/views/index/main.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="description" content="RoboSense(速腾聚创)是全球领先的激光雷达公司。注册资本1000万。利用公司自主研发的具有世界领先水平的机器人感知产品，将激光雷达传感器硬件方案、三维数据处理算法和深度学习技术相结合。通过持续的技术创新，让机器人拥有超越人类眼睛的环境感知能力。公司注册于2014年，初期由哈工大博士团队创建。经过7年的科研沉淀与3年的商业化转换。目前速腾聚创成功建立起围绕激光雷达环境感知为核心的产销研一体化经营体系.速腾聚创研发与运营中心位于中国深圳南山区，并在北京与硅谷设有办事处。截止至2017年4月，公司全职员工超过百名（不含生产基地员工），其中核心研发团队研究生占比超过60%。并长期与麻省理工、清华、哈工大等国内外一流学府及研究机构保持着人才输送和学术研究合作。">
-    <title><%=lang=='cn'?'深圳速腾聚创科技有限公司':'Robosense'%></title>
+    <meta name="description" content="RoboSense(RoboPano)是全球领先的激光雷达公司。注册资本1000万。利用公司自主研发的具有世界领先水平的机器人感知产品，将激光雷达传感器硬件方案、三维数据处理算法和深度学习技术相结合。通过持续的技术创新，让机器人拥有超越人类眼睛的环境感知能力。公司注册于2014年，初期由哈工大博士团队创建。经过7年的科研沉淀与3年的商业化转换。目前RoboPano成功建立起围绕激光雷达环境感知为核心的产销研一体化经营体系.RoboPano研发与运营中心位于中国深圳南山区，并在北京与硅谷设有办事处。截止至2017年4月，公司全职员工超过百名（不含生产基地员工），其中核心研发团队研究生占比超过60%。并长期与麻省理工、清华、哈工大等国内外一流学府及研究机构保持着人才输送和学术研究合作。">
+    <title><%=lang=='cn'?'深圳RoboPano科技有限公司':'Robosense'%></title>
     <link rel="stylesheet" href="/index/css/common.css" type="text/css"> 
     <link rel="stylesheet" href="/index/css/main.css" type="text/css">
     <link rel="prefetch" href="http://qncdn.sz-sti.com/prometheus/prometheus_car.png" />
