--- a/views/index/mobile_lang_cn.ejs
+++ b/views/index/mobile_lang_cn.ejs
@@ -26,13 +26,13 @@
 		},
 		"section_2":{
 			"h4":"自由组合，灵活的线束密度表现",
-			"p":"RS-LiDAR多激光雷达耦合平台方案是指多个混合固态激光雷达经过合理的设计布局，通过激光雷达联合标定以及数据同步处理，达到自由组合混合固态激光雷达点云密度变化的目的。速腾聚创可根据合作伙伴需求提供适当数量的激光雷达耦合方案，标准版为4个激光雷达。"
+			"p":"RS-LiDAR多激光雷达耦合平台方案是指多个混合固态激光雷达经过合理的设计布局，通过激光雷达联合标定以及数据同步处理，达到自由组合混合固态激光雷达点云密度变化的目的。RoboPano可根据合作伙伴需求提供适当数量的激光雷达耦合方案，标准版为4个激光雷达。"
 		},
 		"section_3":{
 			"h4":"全新密集点云方案",
 			"p":"相比单个64线激光雷达，标准版耦合方案（4个16线），在1/4价格基础上，实现高速自动驾驶实际使用所需的相同点云密度。同时，多激光雷达耦合方案，可以根据客户不同需求进行拆装组合，适用不同场景。更加令人兴奋的是，多个激光雷达的耦合，更便于检测与维护。即使在更复杂或者面对紧急故障的驾驶场景，也能从容应对，让自动驾驶更加安全。",
 			"p1":"应用效果展示",
-			"p2":"速腾聚创多线耦合方案实际使用更侧重关注前后方的点云密度。",
+			"p2":"RoboPano多线耦合方案实际使用更侧重关注前后方的点云密度。",
 			"p3":"线束分解",
 			"p4":"根据雷达阵列排布，以上是不同角度的雷达线束密度分解。",
 			"a1":"了解参数",
@@ -40,12 +40,12 @@
 		},
 		"section_4":{
 			"h4":"推进您的高速自动驾驶节奏",
-			"p":"有了多线激光雷达耦合方案，您不需要购买昂贵的高线束激光雷达，也不需要长时间等待产品。我们的方案竭诚与您一起推进您的高速自动驾驶节奏，对于合作伙伴，速腾聚创将从标定模块（内参和外参）、数据采集模块与数据融合模块三方面全方位为您提供支持。"
+			"p":"有了多线激光雷达耦合方案，您不需要购买昂贵的高线束激光雷达，也不需要长时间等待产品。我们的方案竭诚与您一起推进您的高速自动驾驶节奏，对于合作伙伴，RoboPano将从标定模块（内参和外参）、数据采集模块与数据融合模块三方面全方位为您提供支持。"
 		},
 		"section_5":{
 			"h4":"参数/效果",
 			"picurl":"http://qncdn.sz-sti.com/mobile/platform/section_5.png",
-			"p":"*以上视频显示是速腾聚创多16线激光雷达耦合进行演示的效果。",
+			"p":"*以上视频显示是RoboPano多16线激光雷达耦合进行演示的效果。",
 			"tabledata":[ 
 				["激光雷达数量 ：","4个（标准版）"],
 				["激光等级 ：","Class 1"],
@@ -69,7 +69,7 @@
 			"solution":"解决方案"
 		},
 		"section_2":{
-			"p1":"RS-LiDAR是深圳市速腾聚创科技有限公司最新推出的16线激光雷达，是国内首款、世界领先的小型激光雷达。",
+			"p1":"RS-LiDAR是深圳市RoboPano科技有限公司最新推出的16线激光雷达，是国内首款、世界领先的小型激光雷达。",
 			"p2":"主要面向无人驾驶汽车环境感知、机器人环境感知、无人机测绘等领域。",
 			"p3":"RS-LiDAR通过16个激光头同时发射高频率激光束对外界环境进行持续性的扫描，经过高速数字信号处理技术和测距算法提供三维空间点云数据及物体反射率，可以让机器看到周围的世界，为定位、导航、避障等提供有力的保障。",
 			"a":"了解参数"
@@ -144,7 +144,7 @@
 					{
 						"title":"方案原理",
 						"info": [
-							"无人驾驶汽车的成功涉及高精度地图、路标检测、实时定位以及障碍物检测等多项技术，而这些技术通过配合速腾聚创的多线实时激光雷达RS-LiDAR都可以得到快速实现，让无人驾驶触手可及。",
+							"无人驾驶汽车的成功涉及高精度地图、路标检测、实时定位以及障碍物检测等多项技术，而这些技术通过配合RoboPano的多线实时激光雷达RS-LiDAR都可以得到快速实现，让无人驾驶触手可及。",
 							"(1)路标检测：（为了更好的指引您的汽车安全行驶，RS-LiDAR会在对路面进行全面环境扫描的同时对周围的路标进行实时检测，识别车道线、路牙等，让您的汽车持续行驶在正确的道路上。）",
 							"(2)实时定位：（在无人驾驶车辆行驶过程中，RS-LiDAR实时扫描到的局部环境信息持续跟已知的高精度地图、定位系统做即时匹配，这样您就可以得知当前车辆实时精确位置，对车辆行驶状况了如指掌。）",
 							"(3)障碍物识别：（有了RS-LiDAR这神奇的眼睛，无人驾驶车辆就可以看到周边障碍物的远近、高低甚至是表面形状，大大的提高了车辆对障碍物识别的准确度。让车辆可以完美避开障碍，安全地到达您的目的地。）",
@@ -170,7 +170,7 @@
 					{
 						"title":"方案原理",
 						"info":[
-							"经过严格的产品测试，速腾聚创RS-LiDAR精度高，方向性好，可以直接获取距离数据，为机器人的导航提供了便捷有效的环境描述，因此完全可以实现移动机器人在室内、室外环境下实时定位以及导航，让您的机器人可以看到这个世界。",
+							"经过严格的产品测试，RoboPanoRS-LiDAR精度高，方向性好，可以直接获取距离数据，为机器人的导航提供了便捷有效的环境描述，因此完全可以实现移动机器人在室内、室外环境下实时定位以及导航，让您的机器人可以看到这个世界。",
 							"(1)环境制图：（众所周知，智能移动机器人要实现在未知环境下的自主导航，都必须以有效可靠的环境感知为基础。依赖于RS-LiDAR以及其他传感器的组合，并配以我们专门研发的传感器信息处理技术，机器人就能立刻看到自身所处位置的精确地形、环境图像。）",
 							"(2)实时定位：（借助RS-LiDAR“看到”的环境信息跟已知的高精度地图或者定位系统进行即时对比，机器人就可以知道自己所处的精确的位置，进而做出更加准确的行动决策。）",
 							"(3)障碍物识别：RS-LiDAR多线、实时的特性，可以避免由于线束太少、机器人姿态变化导致障碍物从机器人“眼中”消失的问题，也就是说RS-LiDAR可以减少机器人发生障碍物的“漏报”和“虚警”现象，让机器人保持对环境的认知。"
@@ -194,7 +194,7 @@
 					{
 						"title":"方案原理",
 						"info":[
-							"速腾聚创自主研发的RS-LiDAR同样可以应用于无人机载激光雷达测绘。经过速腾聚创与无人机伙伴企业、测绘伙伴企业的严密测试，应用机载激光雷达采集回来的数据可以快速高效的生成DEM、DSM等。可作为土地利用、工程建设规划、城市规划、灾害检测、地理信息系统、公共管理等领域的应用基础，甚至在矿业、农业、林业等方面发挥重要作用。",
+							"RoboPano自主研发的RS-LiDAR同样可以应用于无人机载激光雷达测绘。经过RoboPano与无人机伙伴企业、测绘伙伴企业的严密测试，应用机载激光雷达采集回来的数据可以快速高效的生成DEM、DSM等。可作为土地利用、工程建设规划、城市规划、灾害检测、地理信息系统、公共管理等领域的应用基础，甚至在矿业、农业、林业等方面发挥重要作用。",
 							"(1)数字城市应用：在数字化程度越来越高的今天，基于二维城市形象系统已经不能满足形象时代的要求，将三维空间形象完整呈现已经成为发展的必然。无人机载激光雷达能够快速采集三维空间数据和影像，房屋建模速度快，高程精度高，纹理映射自动化程度高，能够满足分析与测量的需求，广泛用于城市规划的大比例尺地形图获取。",
 							"(2)工程建设规划：机载激光雷达生成的DEM结合GIS及CAD软件，可以是设计人员模拟各种方案以选择出最佳路线或最好位置。对于施工钱的原始预测，DEM结合正射影像可以为工程设计人员提供他们所需的大量地形和测量信息。",
 							"(3)电力巡线与规划：通过机载激光雷达多次回波在一次测量时同时获取电力线、电力设施、植被、地表构造物的三维坐标，实现高效率、高精度巡线应用。在进行电力线路设计时，通过LIDAR数据可以了解整个线路设计区域内的地形和地物要素的情况。",
@@ -221,7 +221,7 @@
 			"solution":"解决方案"
 		},
 		"section_2":{
-			"p1":"Seeker  Series是RoboSense(速腾聚创)完全自主研发的三维激光雷达。",
+			"p1":"Seeker  Series是RoboSense(RoboPano)完全自主研发的三维激光雷达。",
 			"p2":"通过高速激光扫描的方法，Seeker系列产品以点云形式获取物体或地形表面的阵列式几何图像数据，Seeker用户在不同时间、场所都可以在不损眼部的情况下轻松获得精确的三维建档数据。",
 			"p3":"针对不同行业与场景的需求，我们持续开发配套定制化的专业软件。令您在使用过程中更加愉悦。",
 			"a":"了解参数"
@@ -296,13 +296,13 @@
 	},
 	company:{
 		"threeMenu":"企业介绍",
-		"p1":"RoboSense(速腾聚创)是全球领先的激光雷达公司。注册资本1000万。利用公司自主研发的具有世界领先水平的机器人感知产品，将激光雷达传感器硬件方案、三维数据处理算法和深度学习技术相结合。通过持续的技术创新，让机器人拥有超越人类眼睛的环境感知能力。",
-		"p2":"公司注册于2014年，初期由哈工大博士团队创建。经过7年的科研沉淀与3年的商业化转换。目前速腾聚创成功建立起围绕激光雷达环境感知为核心的产销研一体化经营体系。",
-		"p3":"速腾聚创研发与运营中心位于中国深圳南山区，并在北京与硅谷设有办事处。截止至2017年4月，公司全职员工超过百名（不含生产基地员工），其中核心研发团队研究生占比超过60%。并长期与麻省理工、清华、哈工大等国内外一流学府及研究机构保持着人才输送和学术研究合作。",
+		"p1":"RoboSense(RoboPano)是全球领先的激光雷达公司。注册资本1000万。利用公司自主研发的具有世界领先水平的机器人感知产品，将激光雷达传感器硬件方案、三维数据处理算法和深度学习技术相结合。通过持续的技术创新，让机器人拥有超越人类眼睛的环境感知能力。",
+		"p2":"公司注册于2014年，初期由哈工大博士团队创建。经过7年的科研沉淀与3年的商业化转换。目前RoboPano成功建立起围绕激光雷达环境感知为核心的产销研一体化经营体系。",
+		"p3":"RoboPano研发与运营中心位于中国深圳南山区，并在北京与硅谷设有办事处。截止至2017年4月，公司全职员工超过百名（不含生产基地员工），其中核心研发团队研究生占比超过60%。并长期与麻省理工、清华、哈工大等国内外一流学府及研究机构保持着人才输送和学术研究合作。",
 		"p4":"邱纯鑫",
 		"p5":"首席执行官",
 		"p6":"哈尔滨工业大学控制科学方向博士，移动机器人环境感知技术专家",
-		"p7":"曾在JFR(Journal of Field Robotics)等国际顶级机器人刊物上发表多篇论文，完成过包括国家自然科学基金在内的多个机器人相关项目的研发工作；2014年创办深圳速腾聚创(RoboSense)，开发用于自动驾驶领域的高端激光雷达技术，目前该公司已经成为国内激光雷达技术领域的先行者。",
+		"p7":"曾在JFR(Journal of Field Robotics)等国际顶级机器人刊物上发表多篇论文，完成过包括国家自然科学基金在内的多个机器人相关项目的研发工作；2014年创办深圳RoboPano(RoboSense)，开发用于自动驾驶领域的高端激光雷达技术，目前该公司已经成为国内激光雷达技术领域的先行者。",
 	},
 	contact:{
 		"threeMenu":{
@@ -415,9 +415,9 @@
 			"inputplaceholder":"职位关键词"
 		},
 		"section_2":{
-			"h2":"速腾聚创",
-			"p1":"RoboSense(速腾聚创)，利用公司自主研发的具有世界领先水平的机器人感知产品，将三维数据处理算法和深度学习技术相结合。通过持续的技术创新，让机器人拥有超越人类眼睛的环境感知能力。以市场需求为导向，为客户提供硬件设备、软件、服务和解决方案。",
-			"p2":"公司研发中心位于深圳，核心研发团队研究生占比超过70%。并长期与麻省理工、清华、哈工大等国内外一流学府及研究机构保持着人才输送和学术研究合作。目前，RoboSense(速腾聚创)自主研发的激光雷达产品可广泛应用于无人驾驶、无人机、三维测量及数字建模等领域，并针对不同的需求配套定制化的专业软件。凭借全球领先的技术水平、优质的服务与性价比，迅速与各行业的巨擘紧密合作，为合作伙伴带来强劲的行业竞争力。作为国内领先的高新科技型企业，公司获得多项国家科研资金扶持，正高速发展中。",
+			"h2":"RoboPano",
+			"p1":"RoboSense(RoboPano)，利用公司自主研发的具有世界领先水平的机器人感知产品，将三维数据处理算法和深度学习技术相结合。通过持续的技术创新，让机器人拥有超越人类眼睛的环境感知能力。以市场需求为导向，为客户提供硬件设备、软件、服务和解决方案。",
+			"p2":"公司研发中心位于深圳，核心研发团队研究生占比超过70%。并长期与麻省理工、清华、哈工大等国内外一流学府及研究机构保持着人才输送和学术研究合作。目前，RoboSense(RoboPano)自主研发的激光雷达产品可广泛应用于无人驾驶、无人机、三维测量及数字建模等领域，并针对不同的需求配套定制化的专业软件。凭借全球领先的技术水平、优质的服务与性价比，迅速与各行业的巨擘紧密合作，为合作伙伴带来强劲的行业竞争力。作为国内领先的高新科技型企业，公司获得多项国家科研资金扶持，正高速发展中。",
 			"p3":"公司本着“梦想不断，创新无限”的文化，以“功夫到家”的科研精神竭力发展最顶级、性能最优越的高科技产品，以创新点亮世界未来，致力于提升社会生产力，改变人类生活！"
 		},
 		"section_3":{
@@ -433,13 +433,13 @@
 			"li8":"休闲活动"
 		},
 		"section_5":{
-			"h2":"为何加入速腾聚创",
+			"h2":"为何加入RoboPano",
 			"p1":"我们在全球范围内寻找顶尖精英人才",
-			"p2":"只要你敢想敢做，速腾聚创就是你实现梦想的舞台，在这里你可以尽情彰显个性，释放激情。",
-			"p3":"只要你是牛人，只要你对梦想有所执着，深圳速腾聚创科技有限公司就是你的归属。"
+			"p2":"只要你敢想敢做，RoboPano就是你实现梦想的舞台，在这里你可以尽情彰显个性，释放激情。",
+			"p3":"只要你是牛人，只要你对梦想有所执着，深圳RoboPano科技有限公司就是你的归属。"
 		},
 		"section_6":{
-			"h":"准备加入速腾聚创了吗？",
+			"h":"准备加入RoboPano了吗？",
 			"p1":"只要你是牛人，只要你对梦想有所执着，速腾就是你的归属。",
 			"p2":"职位",
 			"h1":"硬件工程师",
