--- a/views/index/nav.ejs
+++ b/views/index/nav.ejs
@@ -41,7 +41,7 @@ var _hmt = _hmt || [];
         template:   '<div id="header">\
                         <div id="nav" class="{{border}}">\
                             <h2 class="logo fl">\
-                                <a class="robosense" href="/web/main/<%=lang%>"><img src="http://qncdn.sz-sti.com/images/icon/logo.png" alt="速腾聚创logo"></a>\
+                                <a class="robosense" href="/web/main/<%=lang%>"><img src="http://qncdn.sz-sti.com/images/icon/logo.png" alt="RoboPanologo"></a>\
                             </h2>\
                             <p class="menu">\
                                 <a href="/web/rslidar/<%=lang%>" v-text="langdata.navtop.rslidar"></a>\
