--- a/views/index/platform.ejs
+++ b/views/index/platform.ejs
@@ -263,7 +263,7 @@
                 <div class="section page_2">
                     <div class="wrap clearfix">
                         <h2><%=lang=='cn' ? '自由组合，灵活的线束密度表现' : 'Flexible combination offers diverse beam density choice.'%></h2>
-                        <p><%=lang=='cn' ? 'RS-LiDAR多激光雷达耦合平台方案是指多个混合固态激光雷达经过合理的设计布局，通过激光雷达联合标定以及数据同步处理，达到自由组合混合固态激光雷达点云密度变化的目的。速腾聚创可根据合作伙伴需求提供适当数量的激光雷达耦合方案，标准版为4个激光雷达。' : 'Multi-LiDAR coupling platform combines multiple hybrid solid-state LiDAR, which through sophisticated layout design, joint LiDAR calibration,and simultaneous data processing to achieve varied point-cloud density results. RoboSense provides customized LiDAR coupling solutions to partners according to specific project demands.The standard coupling solution comprises 4 RS-LiDARs.'%></p>
+                        <p><%=lang=='cn' ? 'RS-LiDAR多激光雷达耦合平台方案是指多个混合固态激光雷达经过合理的设计布局，通过激光雷达联合标定以及数据同步处理，达到自由组合混合固态激光雷达点云密度变化的目的。RoboPano可根据合作伙伴需求提供适当数量的激光雷达耦合方案，标准版为4个激光雷达。' : 'Multi-LiDAR coupling platform combines multiple hybrid solid-state LiDAR, which through sophisticated layout design, joint LiDAR calibration,and simultaneous data processing to achieve varied point-cloud density results. RoboSense provides customized LiDAR coupling solutions to partners according to specific project demands.The standard coupling solution comprises 4 RS-LiDARs.'%></p>
                         <img src="/index/images/rslidar/page_2_img.png">
                     </div>
                 </div>
@@ -275,7 +275,7 @@
                             <div class="item">
                                 <img src="/index/images/rslidar/solution_1.jpg" />
                                 <h4><%=lang=='cn' ? '应用效果展示' : 'Scanning effects'%></h4>
-                                <p><%=lang=='cn' ? '速腾聚创多线耦合方案实际使用更侧重关注前后方的点云密度。' : 'RoboSense multi-LiDAR coupling solutions put emphasis on point cloud density in front of and behind vehicles.'%></p>
+                                <p><%=lang=='cn' ? 'RoboPano多线耦合方案实际使用更侧重关注前后方的点云密度。' : 'RoboSense multi-LiDAR coupling solutions put emphasis on point cloud density in front of and behind vehicles.'%></p>
                                 <a href="javascript:;" class="movetoslide"><%=lang=='cn' ? '了解参数' : 'Learn Parameters'%></a>
                             </div>
                             <div class="item">
@@ -291,7 +291,7 @@
                     <div class="wrap clearfix">
                         <div class="header">
                             <h2><%=lang=='cn' ? '推进您的高速自动驾驶节奏' : 'Speed up your autonomous driving'%></h2>
-                            <p><%=lang=='cn' ? '有了多线激光雷达耦合方案，您不需要购买昂贵的高线束激光雷达，也不需要长时间等待产品。我们的方案竭诚与您一起推进您的高速自动驾驶节奏，对于合作伙伴，速腾聚创将从标定模块（内参和外参）、数据采集模块与数据融合模块三方面全方位为您提供支持。' : 'With our LiDAR coupling solutions, costly high beam density LiDAR is now not the only choice, beside, the hassle of torturous long lead time is averted. As your partner, we will provide supports in standardized module (internal specs and external specs), data collection module and data fusion module, we are dedicated to work with you and speed up your autonomous driving projects.'%></p>
+                            <p><%=lang=='cn' ? '有了多线激光雷达耦合方案，您不需要购买昂贵的高线束激光雷达，也不需要长时间等待产品。我们的方案竭诚与您一起推进您的高速自动驾驶节奏，对于合作伙伴，RoboPano将从标定模块（内参和外参）、数据采集模块与数据融合模块三方面全方位为您提供支持。' : 'With our LiDAR coupling solutions, costly high beam density LiDAR is now not the only choice, beside, the hassle of torturous long lead time is averted. As your partner, we will provide supports in standardized module (internal specs and external specs), data collection module and data fusion module, we are dedicated to work with you and speed up your autonomous driving projects.'%></p>
                         </div>
                         <div class="bg"></div>
                     </div>
@@ -303,7 +303,7 @@
                             <div class="item">
                                 <div class="absolute">
                                     <img src="/index/images/rslidar/xiaoguo.gif" />
-                                    <p><%=lang=='cn' ? '*以上视频显示是速腾聚创多16线激光雷达耦合进行演示的效果。' : '*The above video demonstrates the scanning effect of RS-LiDAR coupling solution.'%></p>
+                                    <p><%=lang=='cn' ? '*以上视频显示是RoboPano多16线激光雷达耦合进行演示的效果。' : '*The above video demonstrates the scanning effect of RS-LiDAR coupling solution.'%></p>
                                 </div>
                             </div>
                             <div class="item">
