--- a/views/index/prometheus.ejs
+++ b/views/index/prometheus.ejs
@@ -69,7 +69,7 @@
     <!-- <div id="navtop">
         <div id="header">                        
             <div id="nav">                            
-                <h2 class="logo fl"><a href="/web/main/cn"><img src="http://qncdn.sz-sti.com/images/icon/logo.png" alt="速腾聚创logo"></a></h2>
+                <h2 class="logo fl"><a href="/web/main/cn"><img src="http://qncdn.sz-sti.com/images/icon/logo.png" alt="RoboPanologo"></a></h2>
                 <p class="menu">                                
                     <a href="/web/rslidar/<%=lang%>"><%=lang=='cn'?'HAD激光雷达感知方案':'HAD LiDAR Perception Solution'%></a>                                
                     <a href="/web/three-dimensional/<%=lang%>"><%=lang=='cn'?'静态激光雷达':'SEEKER'%></a>                                
