--- a/views/index/solutionlists.ejs
+++ b/views/index/solutionlists.ejs
@@ -8,7 +8,7 @@
 				{
 					"title":"方案原理",
 					"info": [
-						"无人驾驶汽车的成功涉及高精度地图、路标检测、实时定位以及障碍物检测等多项技术，而这些技术通过配合速腾聚创的多线实时激光雷达RS-LiDAR都可以得到快速实现，让无人驾驶触手可及。",
+						"无人驾驶汽车的成功涉及高精度地图、路标检测、实时定位以及障碍物检测等多项技术，而这些技术通过配合RoboPano的多线实时激光雷达RS-LiDAR都可以得到快速实现，让无人驾驶触手可及。",
 						"(1)路标检测：（为了更好的指引您的汽车安全行驶，RS-LiDAR会在对路面进行全面环境扫描的同时对周围的路标进行实时检测，识别车道线、路牙等，让您的汽车持续行驶在正确的道路上。）",
 						"(2)实时定位：（在无人驾驶车辆行驶过程中，RS-LiDAR实时扫描到的局部环境信息持续跟已知的高精度地图、定位系统做即时匹配，这样您就可以得知当前车辆实时精确位置，对车辆行驶状况了如指掌。）",
 						"(3)障碍物识别：（有了RS-LiDAR这神奇的眼睛，无人驾驶车辆就可以看到周边障碍物的远近、高低甚至是表面形状，大大的提高了车辆对障碍物识别的准确度。让车辆可以完美避开障碍，安全地到达您的目的地。）",
@@ -34,7 +34,7 @@
 				{
 					"title":"方案原理",
 					"info":[
-						"经过严格的产品测试，速腾聚创RS-LiDAR精度高，方向性好，可以直接获取距离数据，为机器人的导航提供了便捷有效的环境描述，因此完全可以实现移动机器人在室内、室外环境下实时定位以及导航，让您的机器人可以看到这个世界。",
+						"经过严格的产品测试，RoboPanoRS-LiDAR精度高，方向性好，可以直接获取距离数据，为机器人的导航提供了便捷有效的环境描述，因此完全可以实现移动机器人在室内、室外环境下实时定位以及导航，让您的机器人可以看到这个世界。",
 						"(1)环境制图：（众所周知，智能移动机器人要实现在未知环境下的自主导航，都必须以有效可靠的环境感知为基础。依赖于RS-LiDAR以及其他传感器的组合，并配以我们专门研发的传感器信息处理技术，机器人就能立刻看到自身所处位置的精确地形、环境图像。）",
 						"(2)实时定位：（借助RS-LiDAR“看到”的环境信息跟已知的高精度地图或者定位系统进行即时对比，机器人就可以知道自己所处的精确的位置，进而做出更加准确的行动决策。）",
 						"(3)障碍物识别：RS-LiDAR多线、实时的特性，可以避免由于线束太少、机器人姿态变化导致障碍物从机器人“眼中”消失的问题，也就是说RS-LiDAR可以减少机器人发生障碍物的“漏报”和“虚警”现象，让机器人保持对环境的认知。"
@@ -58,7 +58,7 @@
 				{
 					"title":"方案原理",
 					"info":[
-						"速腾聚创自主研发的RS-LiDAR同样可以应用于无人机载激光雷达测绘。经过速腾聚创与无人机伙伴企业、测绘伙伴企业的严密测试，应用机载激光雷达采集回来的数据可以快速高效的生成DEM、DSM等。可作为土地利用、工程建设规划、城市规划、灾害检测、地理信息系统、公共管理等领域的应用基础，甚至在矿业、农业、林业等方面发挥重要作用。",
+						"RoboPano自主研发的RS-LiDAR同样可以应用于无人机载激光雷达测绘。经过RoboPano与无人机伙伴企业、测绘伙伴企业的严密测试，应用机载激光雷达采集回来的数据可以快速高效的生成DEM、DSM等。可作为土地利用、工程建设规划、城市规划、灾害检测、地理信息系统、公共管理等领域的应用基础，甚至在矿业、农业、林业等方面发挥重要作用。",
 						"(1)数字城市应用：在数字化程度越来越高的今天，基于二维城市形象系统已经不能满足形象时代的要求，将三维空间形象完整呈现已经成为发展的必然。无人机载激光雷达能够快速采集三维空间数据和影像，房屋建模速度快，高程精度高，纹理映射自动化程度高，能够满足分析与测量的需求，广泛用于城市规划的大比例尺地形图获取。",
 						"(2)工程建设规划：机载激光雷达生成的DEM结合GIS及CAD软件，可以是设计人员模拟各种方案以选择出最佳路线或最好位置。对于施工钱的原始预测，DEM结合正射影像可以为工程设计人员提供他们所需的大量地形和测量信息。",
 						"(3)电力巡线与规划：通过机载激光雷达多次回波在一次测量时同时获取电力线、电力设施、植被、地表构造物的三维坐标，实现高效率、高精度巡线应用。在进行电力线路设计时，通过LIDAR数据可以了解整个线路设计区域内的地形和地物要素的情况。",
