--- a/views/management.ejs
+++ b/views/management.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>STi 速腾聚创 子账户管理</title>
+		<title>STi RoboPano 子账户管理</title>
 		<meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="/css/suteng.css?v=<%=version%>">
         <meta name="format-detection" content="telephone=no">
