--- a/views/newitem/login.ejs
+++ b/views/newitem/login.ejs
@@ -6,7 +6,7 @@
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <base target="_blank">
-        <title>STi 速腾聚创-登陆</title>
+        <title>STi RoboPano-登陆</title>
         <link href="/css/newitem/bootstrap.css" rel="stylesheet">
         <link href="/css/newitem/reset.css" rel="stylesheet">
         <link href="/css/newitem/font-awesome.min.css" rel="stylesheet">
