--- a/views/panorama.ejs
+++ b/views/panorama.ejs
@@ -404,7 +404,7 @@
                     <%}%>
 
                     r.advertisement=JSON.parse(filterXSS(unicode2Chr(r.advertisement),{whiteList:{div:[]}}));
-                    r.advertisement=r.advertisement?r.advertisement:'速腾聚创';
+                    r.advertisement=r.advertisement?r.advertisement:'RoboPano';
                     r.top_ad='http://qncdn.sz-sti.com/images/tools/logo_ie.png';
 
                     $('#visited').html(r.visited);
@@ -981,7 +981,7 @@
             // bindClick($('.mosaic'),mosaicSwitch);
 
         var advertisement='';
-        advertisement=advertisement?advertisement:'速腾聚创';
+        advertisement=advertisement?advertisement:'RoboPano';
 
         var top_ad='http://qncdn.sz-sti.com/images/tools/logo_ie.png';
 
