--- a/views/panorama_kr.ejs
+++ b/views/panorama_kr.ejs
@@ -542,7 +542,7 @@
         
 
         var advertisement="http://qncdn.sz-sti.com/images/tools/logo_ie.png";
-        advertisement=advertisement?advertisement:'速腾聚创';
+        advertisement=advertisement?advertisement:'RoboPano';
 
         var spots="http://qncdn.sz-sti.com/images/tools/logo_ie.png";
         var comments=[];
