--- a/views/download_houseworld.ejs
+++ b/views/download_houseworld.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>STi 速腾聚创 资源中心</title>
+		<title>STi RoboPano 资源中心</title>
 		<meta charset="utf-8">
         <meta name="format-detection" content="telephone=no">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
