--- a/views/index/m_news.ejs
+++ b/views/index/m_news.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>深圳速腾聚创科技有限公司</title>
+    <title>深圳RoboPano科技有限公司</title>
     <link rel="stylesheet" href="/index/css/m_common.css" type="text/css"> 
     <link rel="stylesheet" href="/index/css/m_news.css" type="text/css"> 
     <script type="text/javascript" src="/index/js/Vue.min.js"></script>
