--- a/views/index/mobilerecruit.ejs
+++ b/views/index/mobilerecruit.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>深圳速腾聚创科技有限公司</title>
+<title>深圳RoboPano科技有限公司</title>
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'/>
 <link rel="stylesheet" href="/index/css/swiper.min.css">
 <link rel="stylesheet" href="/index/css/animate.min.css">
@@ -14,7 +14,7 @@
         <section class="poster_wrap load" id="load">
             <div class="p_loading">
                 <div class="p_loading_logo"></div>
-                <p class="p_loading_tip">深圳速腾聚创科技有限公司</p>
+                <p class="p_loading_tip">深圳RoboPano科技有限公司</p>
             </div>
         </section>
         <div class="swiper-wrapper">
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                     <h1 class="poster_tit clearfix">
-                        深圳速腾聚创
+                        深圳RoboPano
                         <!-- <a class="target_Soc_recruit" href="#" id="Soc_recruit">社招</a>
                         <a class="target_Sch_recruit" href="#" id="Sch_recruit">校招</a> -->
                     </h1>
@@ -52,11 +52,11 @@
                     </li>
                 </ul>
                 <h3 class="about_us_tit ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.3s" swiper-animate-delay="0.3s">
-                    <i class="about_us_tit_ico"></i>为何加入速腾聚创
+                    <i class="about_us_tit_ico"></i>为何加入RoboPano
                 </h3>
                 <div class="about_us_msg_p ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.3s" swiper-animate-delay="0.5s">
-                    我们在全球范围内寻找顶尖精英人才，只要你敢想敢做，深圳速腾聚创科技有限公司就是你实现梦想的舞台，在这里你可以尽情彰显个性，释放激情。<br/>
-                    只要你是牛人，只要你对梦想有所执着，深圳速腾聚创科技有限公司就是你的归属。<br/>
+                    我们在全球范围内寻找顶尖精英人才，只要你敢想敢做，深圳RoboPano科技有限公司就是你实现梦想的舞台，在这里你可以尽情彰显个性，释放激情。<br/>
+                    只要你是牛人，只要你对梦想有所执着，深圳RoboPano科技有限公司就是你的归属。<br/>
                     有意者请将个人简历、相关作品等资料发电子邮件至hr@sz-sti.com，合则约见。<br/>
                     （注意：作品文件大小请控制在40M内）
                 </div>
@@ -300,7 +300,7 @@
                     <a class="search_btn" href="javascript:;"></a>
                 </div>
                 <a class="search_footer_btn ani" href="tel:0755-86325830"  swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.3s" swiper-animate-delay="0.3s">联系我们</a>  
-                <p class="search_footer_tip ani"  swiper-animate-effect="fadeInRight" swiper-animate-duration="0.3s" swiper-animate-delay="0.3s">深圳速腾聚创科技有限公司</p>  
+                <p class="search_footer_tip ani"  swiper-animate-effect="fadeInRight" swiper-animate-duration="0.3s" swiper-animate-delay="0.3s">深圳RoboPano科技有限公司</p>
             </section>   
             
         </div>
