--- a/views/index/pillar.ejs
+++ b/views/index/pillar.ejs
@@ -25,7 +25,7 @@
     <div id="navtop">
         <div id="header">                        
         	<div id="nav">                            
-		    	<h2 class="logo fl"><a href="/web/main/<%=lang%>"><img src="http://qncdn.sz-sti.com/images/icon/logo.png" alt="速腾聚创logo"></a></h2>
+		    	<h2 class="logo fl"><a href="/web/main/<%=lang%>"><img src="http://qncdn.sz-sti.com/images/icon/logo.png" alt="RoboPanologo"></a></h2>
                 <p class="menu">                               
 	                <a href="/web/rslidar/<%=lang%>"><%=lang=='cn'?'多线激光雷达':'RS-LiDAR'%></a>                                
 	                <a href="/web/three-dimensional/<%=lang%>"><%=lang=='cn'?'静态激光雷达':'SEEKER'%></a>                                
