--- a/views/newitem/merge.ejs
+++ b/views/newitem/merge.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>STi 速腾聚创-后台</title>
+    <title>STi RoboPano-后台</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta property="qc:admins" content="7713503706325341637570167" />
