优化紧急通知展示方式

--- a/views/newitem/nav.ejs
+++ b/views/newitem/nav.ejs
@@ -387,8 +387,8 @@
             },
             init: function(){
                 // 页面初始化时默认打开通知窗口
-                noticetoast.shownotice = true;
-                noticetoast.styleZindex.zIndex = '5555';
+                /*noticetoast.shownotice = true;
+                noticetoast.styleZindex.zIndex = '5555';*/
 
                 var _this = this;
                 $.get('/supermaster/notice/data',function(res){
@@ -436,6 +436,9 @@
                     }
                     menubox.readcount = noread;
                     _this.count = _this.notices.length;
+
+                    // 页面初始化时默认打开通知详情窗口
+                    _this.checknotice(1584676800000, true);
                 })
             }
         }
